/* Limiting expressions for numeric properties */
Levitation import of page 2452 rev 8361 (minor).

--- a/0-/GSoC:2008/GenIPC.mediawiki
+++ b/0-/GSoC:2008/GenIPC.mediawiki
@@ -72,6 +72,7 @@ Every value that is read-only from client point of view (e.g. only xmms2d or som
             | MATH_EXP '>' MATH_EXP
             | MATH_EXP '<=' MATH_EXP
             | MATH_EXP '>=' MATH_EXP
+            | MATH_EXP '==' MATH_EXP
  
  MATH_EXP: 'actual_value'
          | 'actual_time'
