--- a/0-/GSoC:2008/Collections 2.0/Operator list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Operator list.mediawiki
@@ -39,7 +39,7 @@
 {{Summer of Code 2008/Collections 2.0/Operator
 | name=Intersection
 | type=XMMS_COLLECTION_TYPE_INTERSECTION
-| result=The mediaids that appear in all the results of all the operands
+| result=The mediaids that appear in all operands
 | attributes=''none''
 | operands=Two or more
 }}
