--- a/0-/GSoC:2008/GenIPC.mediawiki
+++ b/0-/GSoC:2008/GenIPC.mediawiki
@@ -212,3 +212,6 @@ Static methods:
 Static data members:
 * list<string> keys<br>readonly
 * binstring data[string keys]<br>readonly
+
+=== Service client registration API ===
+{{Update}}
