Levitation import of page 2452 rev 8386 (minor).

--- a/0-/GSoC:2008/GenIPC.mediawiki
+++ b/0-/GSoC:2008/GenIPC.mediawiki
@@ -2,7 +2,7 @@
 |student=[[User:darkk|Leonid Evdokimov]]
 |mentor=[[User:Anders Gustafsson|Anders Waldenborg]]
 |cmilestone=[[Summer of Code 2008/GenIPC/Milestones#Student_accepted|Student accepted]]
-|nmilestone=[[Summer of Code 2008/GenIPC/Milestones#TBD|TBD]]
+|nmilestone=[[http://wiki.xmms2.xmms.se/wiki/Summer_of_Code_2008/GenIPC/Milestones#C_clientlib|C clientlib]]
 |description=
 client library code generator that should ease consistent API definition.
 
