--- a/0-/Client:kuechenstation.mediawiki
+++ b/0-/Client:kuechenstation.mediawiki
@@ -1,5 +1,5 @@
 {{Client| name=kuechenstation| author=Eike von Seggern| website=http://kuechenstation.sourceforge.net/
-| version=[https://sourceforge.net/project/showfiles.php?group_id=222283&package_id=268573&release_id=587159 0.1-5] (developed with Dr.Kosmo)
+| version=[https://sourceforge.net/project/showfiles.php?group_id=222283&package_id=268573&release_id=613508 0.2-2] (developed with Dr.Kosmo and Dr.Lecter)
 | devlanguage=Python
 | ui=Console
 | screenshots=[https://sourceforge.net/project/screenshots.php?group_id=222283]
