Levitation import of page 2465 rev 8390.

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -19,7 +19,7 @@ Notation: In '''bold''' high-priority stuff, in ''italic'' optional/low-priority
 * Implement an "index" in the idlist virtual table
 
 
-* '''Readd DAG-checking'''
+* <del>'''Readd DAG-checking'''</del>
 
 
 * <del>'''Implement an id-wise operator'''</del>
