Levitation import of page 2465 rev 8393.

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -16,6 +16,10 @@ Notation: In '''bold''' high-priority stuff, in ''italic'' optional/low-priority
 * Add prefix-matching
 
 
+* Abolish case-sensitive attribute
+* sed "s|FULLORDER|COMPARE|g"
+
+
 * Implement an "index" in the idlist virtual table
 
 
