Levitation import of page 2465 rev 8394.

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -35,6 +35,10 @@ Notation: In '''bold''' high-priority stuff, in ''italic'' optional/low-priority
 
 
 * '''Implement global source-preference'''
+** <del>Change database</del>
+** <del>Use it for collection-queries</del>
+** Use it for medialib_info-variant
+** Have a config-value system to change the priorities
 * ''Implement per collection-node source preference''
 
 
