Levitation import of page 2471 rev 8399.

--- a/0-/IRC Quotes/2008.mediawiki
+++ b/0-/IRC Quotes/2008.mediawiki
@@ -10,3 +10,9 @@
   [08:57:30][juhovh]: not mine
   ...
   [08:58:58][puzzles]: poor bastard child :(
+
+
+== Archived Quotes ==
+* [[IRC Quotes/2005]]
+* [[IRC Quotes/2006]]
+* [[IRC Quotes/2007]]
