Levitation import of page 2465 rev 8403.

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -8,7 +8,8 @@ Notation: In '''bold''' high-priority stuff, in ''italic'' optional/low-priority
 
 * '''React to value_t discussion'''
 * <del>'''Create a Collections 2.0 operator documentation page'''</del>
-* '''Work on the querying proposal'''
+* <del>'''Work on the querying proposal'''</del>
+* '''Work more on the querying proposal'''
 
 
 * <del>Use strings in the medialib everywhere</del>
