--- a/0-/GSoC:2008/nycli/Roadmap.mediawiki
+++ b/0-/GSoC:2008/nycli/Roadmap.mediawiki
@@ -1,6 +1,7 @@
-* Better help system and status command [2008-7-8]
-* Configuration file support [2008-7-10]
-* Review code and FIXMES [2008-7-11]
+* Better help system [2008-7-8]
+* Configuration file support [2008-7-17]
+* Status command [2008-7-23]
+* Review code and FIXMES [2008-7-24]
 * '''''MILESTONE'''''
 
 
